# read_file_and_sort

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  compute_score.cpp  compute_score.h  exercise.cpp
test/: CMakeLists.txt  exercise_test.cpp
